--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "model_bot_api"}]
 python = "^3.11"
 fastapi = "^0.89.1"
 pydantic = "^1.10.4"
+uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
