--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.11"
 fastapi = "^0.89.1"
 pydantic = "^1.10.4"
 uvicorn = "^0.20.0"
+python-multipart = "^0.0.5"
+aiofiles = "^22.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
